chore: cleanup & improve networking (#1433)
The current network implementation has some issues that needed to be
addressed. Most noticeble are:
- issues with very high native memory consumption due to netty not
releasing native memory instantly
- issues with a lot of loaded classes that were auto generated
- use of ASM which leads to issues with server implementations
- rpc code generation can be noticeably improved, especially to ease the
usage
- and many places where the old code was just messy and could be
replaced with a cleaner & easier to read version

- bump the required java version for cloudnet to 22 & enable preview
features.
- replace the usages of ASM in code generation with the java classfile
api
- rewrite rpc handling & code generation completely
- improve default values for settings (for example lower thread counts
for packet handling)
- improve chunked data transfer, prevent race conditions when querying
files
- use custom buffer allocator that releases native memory immediately
instead of relying on GC
- higher test coverage
- ... and many more small cleanups and improvements

Improved networking that should ease the use for external users and
definitely decrease the amount of reported errors.